# adaptemoji-api

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: release.yml  test.yml
src/: lib.rs  main.rs
src/v1/: convert.rs  mod.rs
