[package]
name = "adaptemoji-api"
version = "0.1.0"
edition = "2021"

[dependencies]
adaptemoji = { version = "0.1", default-features = false }
anyhow = "1.0"
axum = { version = "0.7", features = ["multipart"] }
image = "0.25"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
